working on gpu transfer

--- a/CuSorting/CMakeLists.txt
+++ b/CuSorting/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-project(librarySort)
+project(CuSorting)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
@@ -9,11 +9,13 @@ SET(SOURCES
         Source.cpp
         BiggerSource.cpp
         SchemeDataStructure.cpp
+        GlobalHeader.cpp
         BiggerSource.h
         Main.h
         Source.h
         SchemeDataStructure.h
+        GlobalHeader.h
         ResultsDataStructure.cpp ResultsDataStructure.h)
 
-add_executable(librarySort ${SOURCES})
+add_executable(CuSorting ${SOURCES})
 
