--- a/CuSorting/CuSorting.vcxproj.filters
+++ b/CuSorting/CuSorting.vcxproj.filters
@@ -27,20 +27,16 @@
     <ClInclude Include="BiggerSource.h">
       <Filter>Header</Filter>
     </ClInclude>
-    <ClInclude Include="Test.h">
-      <Filter>Header</Filter>
-    </ClInclude>
-    <ClInclude Include="cuLib.h">
-      <Filter>Header</Filter>
-    </ClInclude>
     <ClInclude Include="cuSource.h">
       <Filter>Header</Filter>
     </ClInclude>
     <ClInclude Include="cuSDStruct.h">
       <Filter>Header</Filter>
     </ClInclude>
-    <ClInclude Include="cuRDStruct.h" />
     <ClInclude Include="cuBiggerSource.h">
+      <Filter>Header</Filter>
+    </ClInclude>
+    <ClInclude Include="cuRDStruct.h">
       <Filter>Header</Filter>
     </ClInclude>
   </ItemGroup>
@@ -66,13 +62,8 @@
     <ClCompile Include="GlobalHeader.cpp">
       <Filter>Source</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <CudaCompile Include="Test.cu">
+    <ClCompile Include="cuBiggerSource.cpp">
       <Filter>Source</Filter>
-    </CudaCompile>
-    <CudaCompile Include="cuLib.cu">
-      <Filter>Source</Filter>
-    </CudaCompile>
+    </ClCompile>
   </ItemGroup>
 </Project>
