Compiling in ubuntu, execution not checked

--- a/CuSorting/CMakeLists.txt
+++ b/CuSorting/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-project(CuSorting)
+project(cuSorting)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
@@ -13,7 +13,12 @@ file(GLOB CPP_HEADER
         "*.h"
         )
         
+file(GLOB CUDA_SRC
+        "*.cu"
+        )
+
+cuda_compile(CUDA_OBJ ${CUDA_SRC})        
         
 
-add_executable(CuSorting ${CPP_HEADER} ${CPP_SRC})
+cuda_add_executable(cuSorting ${CPP_HEADER} ${CPP_SRC} ${CUDA_OBJ})
 
