--- a/CuSorting/CuSorting.vcxproj
+++ b/CuSorting/CuSorting.vcxproj
@@ -25,6 +25,7 @@
     <ClInclude Include="cuSource.h" />
     <ClInclude Include="cuSDStruct.h" />
     <ClInclude Include="GlobalHeader.h" />
+    <ClInclude Include="GPU_Sorting_Functions.cuh" />
     <ClInclude Include="Main.h" />
     <ClInclude Include="ResultsDataStructure.h" />
     <ClInclude Include="SchemeDataStructure.h" />
@@ -32,13 +33,16 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BiggerSource.cpp" />
-    <ClCompile Include="cuBiggerSource.cpp" />
-    <ClCompile Include="cuSource.cpp" />
     <ClCompile Include="GlobalHeader.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="ResultsDataStructure.cpp" />
     <ClCompile Include="SchemeDataStructure.cpp" />
     <ClCompile Include="Source.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <CudaCompile Include="cuBiggerSource.cu" />
+    <CudaCompile Include="cuSource.cu" />
+    <CudaCompile Include="GPU_Sorting_Functions.cu" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{A7594E70-909A-4388-8A4B-9FD95CAF1047}</ProjectGuid>
