--- a/CuSorting/CuSorting.vcxproj.filters
+++ b/CuSorting/CuSorting.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="GPU_Sorting_Functions.cuh">
       <Filter>Header</Filter>
     </ClInclude>
+    <ClInclude Include="Debugger.h">
+      <Filter>Header</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BiggerSource.cpp">
@@ -60,6 +63,9 @@
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="GlobalHeader.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Debugger.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
